--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "resetDB": "node ./database/createDB.js",
     "dev": "ts-node-dev src/index.ts",
     "tsc": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -23,9 +22,14 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.0",
     "@types/morgan": "^1.9.3",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.3",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.2.2",
+    "supertest": "^6.3.1",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "ts-standard": "^12.0.1",
     "typescript": "^4.8.4"
@@ -38,7 +42,8 @@
       "./node_modules/ts-standard/eslintrc.json"
     ],
     "rules": {
-      "@typescript-eslint/strict-boolean-expressions": "off"
+      "@typescript-eslint/strict-boolean-expressions": "off",
+      "@typescript-eslint/explicit-function-return-type": "off"
     }
   }
 }
