--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -28,6 +30,8 @@
     "@types/morgan": "^1.9.3",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.3",
+    "@types/passport": "^1.0.11",
+    "@types/passport-jwt": "^3.0.7",
     "@types/supertest": "^2.0.12",
     "jest": "^29.2.2",
     "supertest": "^6.3.1",
