--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "resetDB": "node ./database/createDB.js",
+    "resetDB": "ts-node src/database/resetDatabase.ts",
     "dev": "ts-node-dev src/index.ts",
     "tsc": "tsc",
     "test": "jest --watchAll"
@@ -18,7 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.3",
+    "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0"
   },
@@ -36,6 +36,7 @@
     "jest": "^29.2.2",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "ts-standard": "^12.0.1",
     "typescript": "^4.8.4"
