--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
